// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rollup-plugin-sizes should describe the sizes of a bundle (multi-entry array) 1`] = `
Array [
  Array [
    "%s:",
    "./test/specimens/entry.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "345 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths.js",
    "276 B",
    "80.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry.js",
    "69 B",
    "20.00",
  ],
  Array [
    "%s:",
    "./test/specimens/entry.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "345 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths.js",
    "276 B",
    "80.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry.js",
    "69 B",
    "20.00",
  ],
  Array [
    "%s:",
    "./test/specimens/entry2.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "346 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths2.js",
    "276 B",
    "79.77",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry2.js",
    "70 B",
    "20.23",
  ],
]
`;

exports[`rollup-plugin-sizes should describe the sizes of a bundle (multi-entry object) 1`] = `
Array [
  Array [
    "%s:",
    "./test/specimens/entry.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "345 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths.js",
    "276 B",
    "80.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry.js",
    "69 B",
    "20.00",
  ],
  Array [
    "%s:",
    "./test/specimens/entry.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "345 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths.js",
    "276 B",
    "80.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry.js",
    "69 B",
    "20.00",
  ],
  Array [
    "%s:",
    "./test/specimens/entry2.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "346 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths2.js",
    "276 B",
    "79.77",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry2.js",
    "70 B",
    "20.23",
  ],
  Array [
    "%s:",
    "./test/specimens/entry.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "345 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths.js",
    "276 B",
    "80.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry.js",
    "69 B",
    "20.00",
  ],
  Array [
    "%s:",
    "./test/specimens/entry2.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "346 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths2.js",
    "276 B",
    "79.77",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry2.js",
    "70 B",
    "20.23",
  ],
]
`;

exports[`rollup-plugin-sizes should describe the sizes of a bundle (single entry) 1`] = `
Array [
  Array [
    "%s:",
    "./test/specimens/entry.js",
  ],
  Array [
    "%s - %s (%s%%)",
    "app",
    "345 B",
    "100.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "maths.js",
    "276 B",
    "80.00",
  ],
  Array [
    "	%s - %s (%s%%)",
    "entry.js",
    "69 B",
    "20.00",
  ],
]
`;
